# MoreRONN

./: .gitignore  Dockerfile  README  configure.ac  docker-compose.yml
src/: Makefile.am  MoreRONN.cpp  mclBBF.cpp
src/.deps/: moreRONN-MoreRONN.Po  moreRONN-mclBBF.Po
src/include/: mclBBF.h
web/: README.md  moreronn.wsgi
web/html/: index.html
web/html/css/: style.css
web/html/js/: moreronn.js  moreronn_config.js
