AC_INIT([MoreRONN], [4.9], [varun@strubi.ox.ac.uk])

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_LIBTOOL

AC_PREFIX_DEFAULT(/usr/local/MoreRONN)

AC_PROG_CXX
CFLAGS="-O3"
CXXFLAGS="-O3"

AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
